# US-Historical-Climate-Network-downloader

./: .gitignore  Cargo.toml  README.md  ghcnd_hcn.sqlite-journal  mkdocs.yml  note.md  test.parquet
src/: db.rs  db_fast.rs  deserialise.rs  download.rs  ghcnd-version.txt  main.rs  parquet.rs  reading.rs
src/cli/: mod.rs
src/cli/command/: daily.rs  mod.rs  monthly.rs  stations.rs
src/db/: mod.rs  parquet.rs  parquet_v1.rs  sqlite.rs
src/parquet/: daily.rs  mod.rs  monthly.rs  stations.rs
src/reading/: daily.rs  file_properties.rs  mod.rs  monthly.rs
