[package]
name = "rust-ghcn-daily"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
flate2 = "1.0.30"
futures = "0.3.30"
indicatif = "0.17.8"
reqwest = "0.12.5"
rusqlite = { version = "0.31.0", features = ["bundled"] }
tar = "0.4.41"
tokio = { version = "1.38.0", features = ["full"] }
