[package]
name = "ushcn-daily"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
] }
tar = "0.4.41"
anyhow = "1.0.86"
flate2 = "1.0.30"
futures = "0.3.30"
indicatif = "0.17.8"
reqwest = "0.12.5"
tokio = { version = "1.38.0", features = ["full"] }
arrow = "52.1.0"
parquet = { version = "52.1.0", features = ["async"] }
chrono = "0.4.38"
temp-dir = "0.1.13"
dirs = "5.0.1"

[dev-dependencies]
criterion = "0.5.1"
